[tool.poetry]
name = "tinyfl"
version = "0.1.0"
description = ""
authors = ["Sarang S <email.sarangs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.0"
torchvision = "^0.17.0"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
httpx = "^0.26.0"

[tool.poetry.scripts]
party = "tinyfl.party:main"
agg = "tinyfl.aggregator:main"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
psrecord = "^1.2"
matplotlib = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
